--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -13,7 +13,7 @@
             </div>
         </header>
         <footer>
-            Best School
+            Holberton School
         </footer>
     </body>
 </html>
