--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -10,7 +10,7 @@
         <header>
         </header>
         <footer>
-            Best School
+            Holberton School
         </footer>
     </body>
 </html>
