--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -23,7 +23,7 @@
         <header>
         </header>
         <footer>
-            Best School
+            Holberton School
         </footer>
     </body>
 </html>
