--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -48,7 +48,7 @@
             </section>
         </div>
         <footer>
-            Best School
+            Holberton School
         </footer>
     </body>
 </html>
