--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -66,7 +66,7 @@
             </section>
         </div>
         <footer>
-            Best School
+            Holberton School
         </footer>
     </body>
 </html>
